# magisterska

./: .editorconfig  .envrc  .envrc.tmp  .gitignore  Makefile  README.md  Untitled.ipynb  calc_res.py  check_status.py  check_trace.ipynb  ciit.py  ciit_plots.ipynb  ciit_presentation_plots.ipynb  ciit_results.py  complete_hierarchical.py  complete_new_gpu.py  complete_new_gpu_2.py  complete_new_gpu_3.py  complete_old_gpu.py  complete_timeseers.py  complete_vangja_test.py  cv_results_additive.txt  finance.ipynb  finance2.ipynb  find_mapx.py  generate_plots.py  generate_prediction.py  generate_predictions_btl.py  gennorm_distribution.py  logs.txt  lstm.py  magisterska.ipynb  metrics.csv  metrics2.csv  metrics_sampling.py  neural_prophet.py  neural_prophet_full_hp.py  npr_req.txt  other_files.py  other_models.ipynb  (+34 more)
data/: indexes.pkl
models/: fixed_gennorm_metropolis.pkl  fixed_gennorm_metropolis_test.pkl  fixed_laplace.pkl  fixed_laplace_metropolis_100.pkl  fixed_laplace_metropolis_test.pkl  fixed_normal.pkl  fixed_normal_metropolis_test.pkl  fixed_normal_test.pkl  prophet_fixed_laplace_metropolis_test.pkl.pkl  prophet_test.pkl  trace_10_c_y_c_w.nc  trace_10_c_y_w.nc  trace_30_y_w.nc  trace_40_bc_y_bc_q_bc_m_bc_w.nc  trace_40_y_bc_w.nc  trace_40_y_c_w.nc  trace_40_y_q_bc_m_bc_w.nc  trace_40_y_q_m_bc_w.nc
notebooks/: prophet_basic.ipynb  prophet_from_scratch.ipynb  thesis.ipynb
old_notebooks/: bayesian_analysis.ipynb  exploratory_analysis.ipynb
predictions/: 2015-01-12_A.csv  2015-01-12_AAL.csv  2015-01-12_AAP.csv  2015-01-12_AAPL.csv  2015-01-12_ABBV.csv  2015-01-12_ABT.csv  2015-01-12_ACN.csv  2015-01-12_ADBE.csv  2015-01-12_ADI.csv  2015-01-12_ADM.csv  2015-01-12_ADP.csv  2015-01-12_ADSK.csv  2015-01-12_AEE.csv  2015-01-12_AEP.csv  2015-01-12_AES.csv  2015-01-12_AFL.csv  2015-01-12_AIG.csv  2015-01-12_AIZ.csv  2015-01-12_AJG.csv  2015-01-12_AKAM.csv  2015-01-12_ALB.csv  2015-01-12_ALGN.csv  2015-01-12_ALK.csv  2015-01-12_ALL.csv  (+9253 more)
(+85 files in other folders)
