[project]
name = "thesis"
version = "0.1.0"
description = ""
authors = [{ name = "Jovan Krajevski", email = "jovan.krajevski@gmail.com" }]
classifiers = ["Private :: Do Not Upload"]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
 "numpy<2.0.0",
 "pandas~=2.2.3",
 "jupyter~=1.1.1",
 "matplotlib~=3.9.2",
 "prophet==1.1.6",
 "pymc~=5.18.2",
 "scikit-learn~=1.5.2",
 "scipy~=1.14.1",
 "statsmodels~=0.14.4",
 "yfinance~=0.2.50",
 "cloudpickle~=3.1.0",
]

[tool.setuptools]
py-modules = []

[tool.pip-tools]
generate-hashes = true
# TODO(deps): Can remove this once they become defaults in next major version
allow-unsafe = true
strip-extras = true
